Changes made from the "Birth" release to the "Baby" release:
-----------------------------------------------------------

- Masters are now stored in linked lists instead of hard-limited arrays
- FreeType lists are now used for the string list object.
- A mutex is now used for every access to the database since NDBM is not
  thread-safe.
- Fixed a bug where the content returned by dbm_fetch() was freed. This
  behaviour was wrong since dbm_fetch() returns static data.
- Now uses NDBM (which is much more portable) instead of GDBM
- Fixed a bug in glcDeleteContext() where QuesoGLC tried to destroy the GL
  objects of the current context instead of those of the context to be deleted.
- Contexts are now stored in a linked list and their number is not limited to
  16 anymore.
- Fixed glcGetAllContexts which returned wrong context IDs and did not zero-
  terminate the array.
- Fixed the error path in __glcInitLibrary where glcCommonArea was freed before
  its members.
- Added many comments to the sources.
- Removed the stupid parameter GLC_INTERNAL_ERROR
- QuesoGLC now computes automatically the resolution of the screen in DPI using
  X window commands.
- The GLC_RESOLUTION parameter now provides a way for the user to choose the
  precision of de Casteljau's algorithm.
- Fixed a bug that occured when a context was deleted : its entry were not
  deleted from the 'stateList' array.
- QuesoGLC now has the ability to use custom memory manager routines
  (see __glcFree, __glcMalloc and __glcRealloc)
- FreeType2 now uses a custom memory manager based on __glcFree, __glcMalloc and
  __glcRealloc. This helps debugging and detection of memory leaks.
- Variables GLC_MIN_MAPPED_CODE, GLC_MAX_MAPPED_CODE, GLC_CHAR_COUNT and the
  list GLC_CHAR_LIST are now updated when a new font file is added to a master.
- Changed license of QuesoGLC to LGPL
- Fixed glcAppendFont so that it raises GLC_PARAMETER_ERROR if the font is an