@@ -1,6 +1,4 @@
 #define GLC_POINT_SIZE          100
 
-#define GLC_MAX_FONT		16
-#define GLC_MAX_TEXTURE_OBJECT	16
 #define GLC_MAX_MEASURE		GLC_STRING_CHUNK
 #define GLC_MAX_CHARMAP		256
